fixing content anchor not fully visible on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -178,7 +178,7 @@ a:hover {
 
 
 #contact {
-    margin-bottom: 40px;
+    margin-bottom: 70px;
 }
 .aboutPC {
   position: fixed;
